[project]
name = "hackathon-management-system"
version = "0.1.0"
description = "College hackathon management MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",

]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
